...
    <string name="two">TWO</string>
    <string name="three">THREE</string>
    <string name="four">FOUR</string>
    <string name="five">FIVE</string>
    <string name="let_s_get_started">Let\'s get started!</string>
    <string name="create_account">Create Account</string>
    <string name="already_exists">Email ID exists</string>
    <string name="print_your_five_things">Print your Five Things</string>
    <string name="feature_coming_soon">Feature coming soon!</string>
    <string name="channel_name">FiveThingsChannel</string>
    <string name="channel_description">Five Things Channel</string>
    <string name="intro_header_write">Write Five Things a day</string>
    <string name="intro_content_write">Keep track of your days in five manageable pieces.\nIt’s as easy as 1, 2, 3...4, 5</string>
...
