<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/five_things_item"
            android:icon="@drawable/ic_five_wide"
            android:title="@string/five_things" />
        <item
            android:id="@+id/search_item"
            android:icon="@drawable/ic_search"
            android:title="@string/search" />
        <item
            android:id="@+id/analytics_item"
            android:icon="@drawable/ic_analytics"
            android:title="@string/analytics" />
        <item
            android:id="@+id/settings_item"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
    </group>
</menu>