...
            name="viewModel"
            type="alison.fivethingskotlin.fivethings.FiveThingsViewModel" />

    </data>

    <FrameLayout
        android:id="@+id/five_things_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="alison.fivethingskotlin.fivethings.FiveThingsFragment">

        <ProgressBar
            android:id="@+id/save_spinner"
...
