...
            name="viewModel"
            type="alison.fivethingskotlin.analytics.AnalyticsViewModel" />

    </data>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/analytics_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/sentiment_background"
            android:layout_width="0dp"
...
